// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`r.evolve Null null | Array  1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    Array [],
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": Array [],
  "result": Object {},
}
`;

exports[`r.evolve Null null | Array 1 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    null,
    Array [
      1,
    ],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": "Cannot read property '0' of null",
  "ramdaResult": "PENDING",
  "result": Object {},
}
`;

exports[`r.evolve Number 42 | Array  1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    42,
    Array [],
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": Array [],
  "result": Object {},
}
`;

exports[`r.evolve Number 42 | Array 1 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    42,
    Array [
      1,
    ],
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": Array [
    1,
  ],
  "result": Object {},
}
`;

exports[`r.evolve Object [object Object] | Array  1`] = `
Object {
  "error": "Cannot read property '0' of ",
  "inputs": Array [
    Object {
      "a": 1,
    },
    Array [],
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": Array [],
  "result": "PENDING",
}
`;

exports[`r.evolve Object [object Object] | Array  2`] = `
Object {
  "error": "Cannot read property '0' of ",
  "inputs": Array [
    Object {
      "a": [Function],
    },
    Array [],
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": Array [],
  "result": "PENDING",
}
`;

exports[`r.evolve Object [object Object] | Array 1 1`] = `
Object {
  "error": "Cannot read property '0' of 1",
  "inputs": Array [
    Object {
      "a": 1,
    },
    Array [
      1,
    ],
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": Array [
    1,
  ],
  "result": "PENDING",
}
`;

exports[`r.evolve Object [object Object] | Array 1 2`] = `
Object {
  "error": "Cannot read property '0' of 1",
  "inputs": Array [
    Object {
      "a": [Function],
    },
    Array [
      1,
    ],
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": Array [
    1,
  ],
  "result": "PENDING",
}
`;

exports[`r.evolve String  | Array  1`] = `
Object {
  "error": "Cannot read property '0' of ",
  "inputs": Array [
    "",
    Array [],
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": Array [],
  "result": "PENDING",
}
`;

exports[`r.evolve String  | Array 1 1`] = `
Object {
  "error": "Cannot read property '0' of 1",
  "inputs": Array [
    "",
    Array [
      1,
    ],
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": Array [
    1,
  ],
  "result": "PENDING",
}
`;

exports[`r.evolve Undefined undefined | Array  1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    undefined,
    Array [],
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": Array [],
  "result": Object {},
}
`;

exports[`r.evolve Undefined undefined | Array 1 1`] = `
Object {
  "error": "PENDING",
  "inputs": Array [
    undefined,
    Array [
      1,
    ],
  ],
  "label": "Rambda should throw",
  "ok": false,
  "ramdaError": "Cannot read property '0' of undefined",
  "ramdaResult": "PENDING",
  "result": Object {},
}
`;
